feat: add dibidi cron

--- a/admin/view/template/catalog/import.twig
+++ b/admin/view/template/catalog/import.twig
@@ -46,6 +46,7 @@
 				<option value="{{supplier_promanicure}}">{{supplier_promanicure}}</option>
 				<option value="{{supplier_lash116}}">{{supplier_lash116}}</option>
 				<option value="{{supplier_tefia}}">{{supplier_tefia}}</option>
+                <option value="{{supplier_dibidi}}">{{supplier_dibidi}}</option>
 			  </select>
             </div>
 		   </div>
