--- a/admin/view/template/sale/order_list.twig
+++ b/admin/view/template/sale/order_list.twig
@@ -126,7 +126,8 @@
                     <td class="text-left">{% if sort == 'o.date_added' %} <a href="{{ sort_date_added }}" class="{{ order|lower }}">{{ column_date_added }}</a> {% else %} <a href="{{ sort_date_added }}">{{ column_date_added }}</a> {% endif %}</td>
                     <td class="text-left">{% if sort == 'o.date_modified' %} <a href="{{ sort_date_modified }}" class="{{ order|lower }}">{{ column_date_modified }}</a> {% else %} <a href="{{ sort_date_modified }}">{{ column_date_modified }}</a> {% endif %}</td>
                     <td class="text-left">{{ column_readiness }}</td>
-                    <td class="text-right">{{ column_action }}</td>
+                      <th class="text-left">Телефон</th>
+                      <td class="text-right">{{ column_action }}</td>
                   </tr>
                 </thead>
                 <tbody>
@@ -148,7 +149,8 @@
                   <td class="text-left">{{ order.date_added }}</td>
                   <td class="text-left">{{ order.date_modified }}</td>
                   <td class="text-left{% if order.readiness %} order_is_ready{% endif %}">{{ order.readiness_text }}</td>
-                  <td class="text-right"><div style="min-width: 120px;">
+                    <td class="text-left">{{ order.telephone }}</td>
+                    <td class="text-right"><div style="min-width: 120px;">
                       <div class="btn-group"> <a href="{{ order.view }}" data-toggle="tooltip" title="{{ button_view }}" class="btn btn-primary"><i class="fa fa-eye"></i></a>
                         <button type="button" data-toggle="dropdown" class="btn btn-primary dropdown-toggle"><span class="caret"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
